# GeometryLib

./: .gitignore  CMakeLists.txt  Geometry.cpp  Geometry.h
